<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top" />

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_f4f4f4">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_f4f4f4"
                    android:orientation="vertical"
                    android:padding="@dimen/px30">

                    <com.flyco.roundview.RoundFrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/px20"
                        app:rv_backgroundColor="@color/white"
                        app:rv_cornerRadius="@dimen/px20">

                        <ImageView
                            android:id="@+id/iv_img"
                            android:layout_width="322dp"
                            android:layout_height="317dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/px10"
                            android:layout_marginTop="@dimen/px10"
                            android:scaleType="fitXY"
                            android:src="@mipmap/place_holder" />

                    </com.flyco.roundview.RoundFrameLayout>

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv12black"
                        android:layout_marginBottom="@dimen/px30"
                        android:layout_marginLeft="@dimen/px30"
                        android:layout_marginTop="@dimen/px30"
                        android:text="@string/right_name" />

                    <com.flyco.roundview.RoundFrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:rv_backgroundColor="@color/white"
                        app:rv_cornerRadius="@dimen/px15">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/enter_animal_names"
                            android:padding="@dimen/px20"
                            android:textSize="@dimen/size24" />

                    </com.flyco.roundview.RoundFrameLayout>

                    <com.flyco.roundview.RoundTextView
                        android:id="@+id/bt_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px30"
                        android:gravity="center"
                        android:padding="@dimen/px20"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        app:rv_backgroundColor="@color/blue_6759AE"
                        app:rv_cornerRadius="@dimen/px15" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </LinearLayout>


</layout>